tests/ui/fail/skip/use_skipped_setter_1.stderr
error[E0599]: no method named `set_unused_1` found for struct `Sparse` in the current scope
  --> tests/ui/fail/skip/use_skipped_setter_1.rs:14:12
   |
4  | / #[derive(Debug)]
5  | | pub struct Sparse {
   | |___- method `set_unused_1` not found for this struct
...
14 |       sparse.set_unused_1(0b11_1111_1111); // ERROR!
   |              ^^^^^^^^^^^^
   |
help: there is a method `unused_1` with a similar name, but with different arguments
  --> tests/ui/fail/skip/use_skipped_setter_1.rs:6:5
   |
6  |     #[skip(setters)]
   |     ^
